--- a/src/index.css
+++ b/src/index.css
@@ -1,560 +1,415 @@
-/*
-===============
-Variables
-===============
-*/
+/* ============= GLOBAL CSS =============== */
 
-:root {
-  /* dark shades of primary color*/
-  --clr-primary-1: hsl(184, 91%, 17%);
-  --clr-primary-2: hsl(185, 84%, 25%);
-  --clr-primary-3: hsl(185, 81%, 29%);
-  --clr-primary-4: hsl(184, 77%, 34%);
-  /* primary/main color */
-  --clr-primary-5: hsl(185, 62%, 45%);
-  /* lighter shades of primary color */
-  --clr-primary-6: hsl(185, 57%, 50%);
-  --clr-primary-7: hsl(184, 65%, 59%);
-  --clr-primary-8: hsl(184, 80%, 74%);
-  --clr-primary-9: hsl(185, 94%, 87%);
-  --clr-primary-10: hsl(186, 100%, 94%);
-  /* darkest grey - used for headings */
-  --clr-grey-1: hsl(209, 61%, 16%);
-  --clr-grey-2: hsl(211, 39%, 23%);
-  --clr-grey-3: hsl(209, 34%, 30%);
-  --clr-grey-4: hsl(209, 28%, 39%);
-  /* grey used for paragraphs */
-  --clr-grey-5: hsl(210, 22%, 49%);
-  --clr-grey-6: hsl(209, 23%, 60%);
-  --clr-grey-7: hsl(211, 27%, 70%);
-  --clr-grey-8: hsl(210, 31%, 80%);
-  --clr-grey-9: hsl(212, 33%, 89%);
-  --clr-grey-10: hsl(210, 36%, 96%);
-  --clr-white: #fff;
-  --ff-primary: "Lato", sans-serif;
-  --transition: all 0.3s linear;
-  --spacing: 0.25rem;
-  --radius: 0.5rem;
-  --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-  --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-}
-/*
-===============
-Global Styles
-===============
-*/
-
-* {
+*,
+::after,
+::before {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+
 html {
-  scroll-behavior: smooth;
-}
-body {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background: var(--clr-white);
-  color: var(--clr-grey-1);
-  line-height: 1.5;
-  font-size: 0.875rem;
-}
-ul {
-  list-style-type: none;
-}
-a {
-  text-decoration: none;
-}
-img:not(.nav-logo) {
-  width: 100%;
-  display: block;
+  font-size: 100%;
+} /*16px*/
+
+:root {
+  /* colors */
+  --primary-100: #e2e0ff;
+  --primary-200: #c1beff;
+  --primary-300: #a29dff;
+  --primary-400: #837dff;
+  --primary-500: #645cff;
+  --primary-600: #504acc;
+  --primary-700: #3c3799;
+  --primary-800: #282566;
+  --primary-900: #141233;
+
+  /* grey */
+  --grey-50: #f8fafc;
+  --grey-100: #f1f5f9;
+  --grey-200: #e2e8f0;
+  --grey-300: #cbd5e1;
+  --grey-400: #94a3b8;
+  --grey-500: #64748b;
+  --grey-600: #475569;
+  --grey-700: #334155;
+  --grey-800: #1e293b;
+  --grey-900: #0f172a;
+  /* rest of the colors */
+  --black: #222;
+  --white: #fff;
+  --red-light: #f8d7da;
+  --red-dark: #842029;
+  --green-light: #d1e7dd;
+  --green-dark: #0f5132;
+
+  --small-text: 0.875rem;
+  --extra-small-text: 0.7em;
+  /* rest of the vars */
+  --backgroundColor: var(--grey-50);
+  --textColor: var(--grey-900);
+  --borderRadius: 0.25rem;
+  --letterSpacing: 1px;
+  --transition: 0.3s ease-in-out all;
+  --max-width: 1120px;
+  --fixed-width: 800px;
+  --view-width: 90vw;
+  /* box shadow*/
+  --shadow-1: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+  --shadow-2: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  --shadow-3: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0 4px 6px -2px rgba(0, 0, 0, 0.05);
+  --shadow-4: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
+    0 10px 10px -5px rgba(0, 0, 0, 0.04);
 }
 
+body {
+  background: var(--backgroundColor);
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight: 400;
+  line-height: 1;
+  color: var(--textColor);
+}
+p {
+  margin: 0;
+}
 h1,
 h2,
 h3,
-h4 {
-  letter-spacing: var(--spacing);
+h4,
+h5 {
+  margin: 0;
+  font-weight: 400;
+  line-height: 1;
   text-transform: capitalize;
-  line-height: 1.25;
-  margin-bottom: 0.75rem;
+  letter-spacing: var(--letterSpacing);
 }
+
 h1 {
-  font-size: 3rem;
+  font-size: clamp(2rem, 5vw, 5rem); /* Large heading */
 }
+
 h2 {
-  font-size: 2rem;
+  font-size: clamp(1.5rem, 3vw, 3rem); /* Medium heading */
 }
+
 h3 {
-  font-size: 1.25rem;
+  font-size: clamp(1.25rem, 2.5vw, 2.5rem); /* Small heading */
 }
+
 h4 {
-  font-size: 0.875rem;
-}
-p {
-  margin-bottom: 1.25rem;
-  color: var(--clr-grey-5);
-}
-@media screen and (min-width: 800px) {
-  h1 {
-    font-size: 4rem;
-  }
-  h2 {
-    font-size: 2.5rem;
-  }
-  h3 {
-    font-size: 1.75rem;
-  }
-  h4 {
-    font-size: 1rem;
-  }
-  body {
-    font-size: 1rem;
-  }
-  h1,
-  h2,
-  h3,
-  h4 {
-    line-height: 1;
-  }
-}
-/*  global classes */
-
-.btn {
-  text-transform: uppercase;
-  background: var(--clr-primary-5);
-  color: var(--clr-white);
-  padding: 0.375rem 0.75rem;
-  letter-spacing: var(--spacing);
-  display: inline-block;
-  /* font-weight: 700; */
-  transition: var(--transition);
-  font-size: 0.875rem;
-  border: 2px solid transparent;
-  cursor: pointer;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
-}
-.btn:hover {
-  color: var(--clr-primary-1);
-  background: var(--clr-primary-8);
-}
-/* section */
-.section {
-  padding: 5rem 0;
-  scroll-margin-top: 4rem;
-}
-.section-title {
-  text-align: center;
-  margin-bottom: 4rem;
-}
-.section-title h2 {
-  text-transform: uppercase;
-}
-.section-title span {
-  color: var(--clr-primary-5);
-}
-.section-center {
-  width: 90vw;
-  margin: 0 auto;
-  max-width: 1170px;
-}
-@media screen and (min-width: 992px) {
-  .section-center {
-    width: 95vw;
-  }
+  font-size: clamp(1rem, 2vw, 2rem); /* Extra small heading */
 }
 
-/*
-===============
-Hero
-===============
-*/
-
-.hero {
-  min-height: 100vh;
-  background: var(--clr-primary-5);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.hero-banner {
-  text-align: center;
-  color: var(--clr-white);
-  padding: 0 3rem;
-}
-.hero-banner h1 {
-  text-transform: uppercase;
-}
-.hero-banner p {
-  max-width: 35rem;
-  margin-left: auto;
-  margin-right: auto;
-  color: var(--clr-white);
-  letter-spacing: var(--spacing);
-}
-.hero-btn {
-  padding: 0.9rem 1.6rem;
-  font-size: 1.25rem;
-  background: var(--clr-white);
-  color: var(--clr-primary-5);
-}
-.hero-btn:hover {
-  background: transparent;
-  color: var(--clr-white);
-  border-color: var(--clr-white);
-}
-@media screen and (min-width: 768px) {
-  .hero {
-    background: linear-gradient(rgb(44, 174, 186, 0.7), rgba(0, 0, 0, 0.7)),
-      url("./images/main.jpg") center/cover no-repeat;
-  }
-  .hero-banner {
-    padding: 0;
-  }
-  .hero-banner p {
-    max-width: 45rem;
-  }
-}
-/*
-===============
-About
-===============
-*/
-/* section added to globals */
-/* title added to globals */
-/* section center added to globals */
-.about-img,
-.about-info {
-  margin-bottom: 2rem;
+h5 {
+  font-size: clamp(0.875rem, 1.5vw, 1.5rem); /* Tiny heading */
 }
 
-@media screen and (min-width: 992px) {
-  .about-center {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    column-gap: 2rem;
-  }
-  .about-img,
-  .about-info {
-    margin-bottom: 0;
-  }
-}
-@media screen and (min-width: 1170px) {
-  .about-img::before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    border: 0.5rem solid var(--clr-primary-5);
-    box-sizing: border-box;
-    top: -1.5rem;
-    left: -1.5rem;
-  }
-
-  .about-img {
-    position: relative;
-  }
-  .about-photo {
-    position: relative;
-  }
-}
-/*
-===============
-Services
-===============
-*/
-.services {
-  background: var(--clr-grey-10);
-}
-.service {
-  text-align: center;
-  margin-bottom: 3rem;
-}
-.service-icon {
-  background: var(--clr-primary-5);
-  color: var(--clr-primary-1);
-  padding: 0.5rem;
-  display: inline-block;
-  font-size: 2rem;
+.text {
   margin-bottom: 1.5rem;
-}
-.service-text {
-  max-width: 20rem;
-  margin-left: auto;
-  margin-right: auto;
+  max-width: 40em;
 }
 
-@media screen and (min-width: 576px) {
-  .services-center {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 2rem;
-  }
-  .service {
-    margin-bottom: 0rem;
-  }
-}
-@media screen and (min-width: 992px) {
-  .services-center {
-    grid-template-columns: 1fr 1fr 1fr;
-  }
-}
-@media screen and (min-width: 1170px) {
-  .service {
-    display: flex;
-    text-align: left;
-  }
-  .service-icon {
-    align-self: start;
-  }
-  .service-info {
-    padding-left: 1rem;
-  }
-  .service-title {
-    margin-bottom: 0.5rem;
-  }
+small,
+.text-small {
+  font-size: var(--small-text);
 }
 
-/*
-===============
-Featured Tours
-===============
-*/
+a {
+  text-decoration: none;
+}
+ul {
+  list-style-type: none;
+  padding: 0;
+}
 
-.tour-card {
-  transition: var(--transition);
-  background: var(--clr-grey-10);
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-  margin-bottom: 2rem;
-}
-.tour-card:hover {
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-  transform: scale(1.02);
-}
-.tour-img-container {
-  position: relative;
-}
-.tour-img {
-  height: 15rem;
+.img {
+  width: 100%;
+  display: block;
   object-fit: cover;
 }
-.tour-date {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  background: var(--clr-primary-8);
-  color: var(--clr-primary-1);
+/* buttons */
+
+.btn {
+  cursor: pointer;
+  color: var(--white);
+  background: var(--primary-500);
+  border: transparent;
+  border-radius: var(--borderRadius);
+  letter-spacing: var(--letterSpacing);
+  padding: 0.375rem 0.75rem;
+  box-shadow: var(--shadow-1);
+  transition: var(--transition);
   text-transform: capitalize;
-  padding: 0.25rem 0.5rem;
-  margin-bottom: 0;
+  display: inline-block;
 }
-.tour-info {
-  padding: 1.25rem 1.5rem;
+.btn:hover {
+  background: var(--primary-700);
+  box-shadow: var(--shadow-3);
 }
-/* additional css for different layout*/
-.tour-title {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
+.btn-hipster {
+  color: var(--primary-500);
+  background: var(--primary-200);
 }
-.tour-title p,
-.tour-title h4 {
-  margin-bottom: 0.75rem;
-  line-height: 1.25;
+.btn-hipster:hover {
+  color: var(--primary-200);
+  background: var(--primary-700);
 }
-.tour-title p {
-  color: var(--clr-grey-7);
+.btn-block {
+  width: 100%;
 }
-/* end of additional css for different layout*/
-.tour-footer {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  align-items: center;
+
+/* alerts */
+.alert {
+  padding: 0.375rem 0.75rem;
+  margin-bottom: 1rem;
+  border-color: transparent;
+  border-radius: var(--borderRadius);
 }
-.tour-footer p {
-  line-height: 0;
-  margin-bottom: 0;
+
+.alert-danger {
+  color: var(--red-dark);
+  background: var(--red-light);
+}
+.alert-success {
+  color: var(--green-dark);
+  background: var(--green-light);
+}
+/* form */
+
+.form {
+  width: 90vw;
+  max-width: var(--fixed-width);
+  background: var(--white);
+  border-radius: var(--borderRadius);
+  box-shadow: var(--shadow-2);
+  padding: 2rem 2.5rem;
+  margin: 3rem auto;
+}
+.form-label {
+  display: block;
+  font-size: var(--small-text);
+  margin-bottom: 0.5rem;
   text-transform: capitalize;
-  color: var(--clr-primary-5);
+  letter-spacing: var(--letterSpacing);
 }
-.tour-footer p span {
-  margin-right: 0.25rem;
+.form-input,
+.form-textarea {
+  width: 100%;
+  padding: 0.375rem 0.75rem;
+  border-radius: var(--borderRadius);
+  background: var(--backgroundColor);
+  border: 1px solid var(--grey-200);
 }
-.tour-btn {
-  text-align: center;
+
+.form-row {
+  margin-bottom: 1rem;
 }
-@media screen and (min-width: 768px) {
-  .featured-center {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 2rem;
-  }
+
+.form-textarea {
+  height: 7rem;
 }
-@media screen and (min-width: 1170px) {
-  .featured-center {
-    grid-template-columns: 1fr 1fr 1fr;
+::placeholder {
+  font-family: inherit;
+  color: var(--grey-400);
+}
+.form-alert {
+  color: var(--red-dark);
+  letter-spacing: var(--letterSpacing);
+  text-transform: capitalize;
+}
+/* alert */
+
+@keyframes spinner {
+  to {
+    transform: rotate(360deg);
   }
 }
 
-/*
-===============
-Footer
-===============
-*/
-.footer {
-  background: var(--clr-grey-1);
+.loading {
+  width: 6rem;
+  height: 6rem;
+  border: 5px solid var(--grey-400);
+  border-radius: 50%;
+  border-top-color: var(--primary-500);
+  animation: spinner 0.6s linear infinite;
+  margin: 0 auto;
+}
+
+/* title */
+
+.title {
   text-align: center;
-  padding-left: 2rem;
-  padding-right: 2rem;
 }
-.footer-links,
-.footer-icons {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 1.5rem;
-  flex-wrap: wrap;
+
+.title-underline {
+  background: var(--primary-500);
+  width: 7rem;
+  height: 0.25rem;
+  margin: 0 auto;
+  margin-top: 1rem;
 }
-.footer-link {
-  color: var(--clr-white);
-  text-transform: capitalize;
-  font-size: 1rem;
-  margin-right: 1rem;
-  letter-spacing: var(--spacing);
-  transition: var(--transition);
-}
-.footer-link:hover {
-  color: var(--clr-primary-5);
-}
-.footer-icon {
-  font-size: 2rem;
-  margin-right: 1rem;
-  color: var(--clr-white);
-  transition: var(--transition);
-}
-.footer-icon:hover {
-  color: var(--clr-primary-5);
-}
-.copyright {
-  text-transform: capitalize;
-  letter-spacing: var(--spacing);
-  color: var(--clr-white);
-}
-.copyright span {
-  margin-left: 0.5rem;
-}
+/* ============= PROJECT CSS =============== */
+
 /*
 ===============
 Navbar
 ===============
 */
-/* add :not(.nav-logo) to img */
-
-.navbar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background: var(--clr-white);
-  box-shadow: var(--dark-shadow);
-  z-index: 2;
-  height: 4rem;
+nav {
+  background: var(--primary-500);
+  height: 5rem;
   display: flex;
+  justify-content: center;
   align-items: center;
 }
-.nav-icons {
-  display: none;
-}
+
 .nav-center {
-  width: 90vw;
-  max-width: 1170px;
-  margin: 0 auto;
-}
-.nav-header {
+  width: var(--view-width);
+  max-width: var(--fixed-width);
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.nav-toggle {
-  background: transparent;
-  border: none;
-  outline: none;
-  font-size: 1.5rem;
-  color: var(--clr-primary-5);
-  cursor: pointer;
-  transition: var(--transition);
-}
-.nav-toggle:hover {
-  transform: scale(1.2);
-}
-.nav-link {
-  display: block;
-  padding: 1rem 2rem;
-  text-transform: capitalize;
-  letter-spacing: var(--spacing);
-  transition: var(--transition);
-  color: var(--clr-grey-1);
-  cursor: pointer;
-  font-size: 1rem;
-}
-.nav-link:hover {
-  color: var(--clr-primary-1);
-  background: var(--clr-primary-8);
-  padding-left: 2.25rem;
-}
-/* nav toggle functionality */
-.nav-links {
-  height: 0;
-  overflow: hidden;
-  transition: var(--transition);
-}
-.show-links {
-  height: 280px;
-}
-/* nav at bigger screen size */
-@media screen and (min-width: 992px) {
-  /* hide nav toggle button */
-  .nav-toggle {
-    display: none;
-  }
-  /* show links */
-  .nav-links {
-    height: auto;
-    display: flex;
-  }
-  .nav-center {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    /* optional */
-    flex-wrap: wrap;
-  }
-  .nav-header {
-    padding: 0 0;
-  }
-  .nav-link {
-    padding: 0 0;
-  }
-  .nav-link:hover {
-    padding: 0;
-    color: var(--clr-primary-5);
-    background: transparent;
-  }
-  .nav-icons {
-    display: flex;
-  }
 
-  .nav-link {
-    margin-right: 0.7rem;
-  }
-  .nav-icon {
-    margin-right: 0.7rem;
-    color: var(--clr-primary-5);
-    font-size: 1.2rem;
-    transition: var(--transition);
-  }
-  .nav-icon:hover {
-    color: var(--clr-primary-8);
-  }
+nav h4 {
+  color: var(--white);
+}
+
+.nav-container {
+  display: block;
+  position: relative;
+}
+
+.cart-icon {
+  font-size: 2.25rem;
+  color: var(--white);
+}
+
+.amount-container {
+  position: absolute;
+  top: -0.85rem;
+  right: -0.85rem;
+  width: 1.75rem;
+  height: 1.75rem;
+  background: var(--primary-300);
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.total-amount {
+  color: var(--white);
+  font-size: 1.25rem;
+}
+/*
+===============
+Cart
+===============
+*/
+.cart {
+  min-height: calc(100vh - 5rem);
+  width: var(--view-width);
+  max-width: var(--fixed-width);
+  margin: 0 auto;
+  margin-top: 40px;
+  padding: 2.5rem 0;
+}
+
+.cart h2 {
+  text-transform: uppercase;
+  text-align: center;
+  margin-bottom: 3rem;
+}
+
+hr {
+  background: var(--grey-300);
+  border-color: transparent;
+  margin-bottom: 1rem;
+  border-width: 1px;
+}
+
+.cart footer {
+  margin-top: 5rem;
+  text-align: center;
+}
+
+.cart-total {
+  text-transform: capitalize;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+}
+
+.cart-total span {
+  background: var(--primary-500);
+  display: inline-block;
+  padding: 0.25rem 0.5rem;
+  border-radius: var(--borderRadius);
+  color: var(--white);
+}
+/*
+===============
+Cart Item
+===============
+*/
+
+.cart-item {
+  display: grid;
+  align-items: center;
+  grid-template-columns: auto 1fr auto;
+  column-gap: 1.5rem;
+  margin: 1.5rem 0;
+}
+
+.cart-item img {
+  width: 5rem;
+  height: 5rem;
+  object-fit: cover;
+}
+
+.item-price {
+  color: var(--grey-500);
+  display: block;
+}
+
+.remove-btn {
+  color: var(--primary-500);
+  letter-spacing: var(--letterSpacing);
+  cursor: pointer;
+  font-size: 0.85rem;
+  background: transparent;
+  border-color: transparent;
+  margin-top: 0.375rem;
+  transition: var(--transition);
+}
+
+.remove-btn:hover {
+  color: var(--primary-600);
+}
+
+.amount-btn {
+  width: 1.5rem;
+  background: transparent;
+  border-color: transparent;
+  cursor: pointer;
+}
+
+.amount-icon {
+  font-size: 1.25rem;
+  color: var(--primary-500);
+  transition: var(--transition);
+}
+
+.amount-icon:hover {
+  color: var(--primary-700);
+}
+
+.amount {
+  font-size: 1.25rem;
+  display: block;
+  text-align: center;
 }
